@@ -12,7 +12,7 @@
 
 enum RECIPIENT_TYPE
 {
-  DEVICE_RECIPIENT,     /* Recipient device    */
+  DEVICE_RECIPIENT = 0, /* Recipient device    */
   INTERFACE_RECIPIENT,  /* Recipient interface */
   ENDPOINT_RECIPIENT,   /* Recipient endpoint  */
   OTHER_RECIPIENT
@@ -57,7 +57,7 @@ int usb_cb_get_descriptor (uint8_t rcp, uint8_t desc_type, uint8_t desc_index,
 int usb_cb_handle_event (uint8_t event_type, uint16_t value);
 void usb_cb_ctrl_write_finish (uint8_t req, uint8_t req_no,
 			       struct req_args *arg);
-void usb_cb_tx_done (uint8_t ep_num);
+void usb_cb_tx_done (uint8_t ep_num, uint32_t len, int success);
 void usb_cb_rx_ready (uint8_t ep_num);
 
 enum {
@@ -85,25 +85,37 @@ enum DEVICE_STATE
 };
 
 void usb_lld_init (uint8_t feature);
-
 int usb_lld_reply_request (const void *buf, size_t buflen,
 			   struct req_args *arg);
-void usb_lld_set_data_to_recv (void *p, size_t len);
-
-void usb_lld_tx_enable (uint8_t ep_num, const void *buf, size_t len);
-int usb_lld_tx_result (int ep_num);
-
-void usb_lld_rx_enable (int ep_num, void *buf, size_t len);
 int usb_lld_rx_data_len (int ep_num);
-
-void usb_lld_stall (int ep_num);
-
 void usb_lld_reset (uint8_t feature);
-void usb_lld_setup_endpoint (int n, int rx_en, int tx_en);
 void usb_lld_set_configuration (uint8_t config);
 uint8_t usb_lld_current_configuration (void);
-
 void usb_lld_prepare_shutdown (void);
 void usb_lld_shutdown (void);
-
 void usb_interrupt_handler (void);
+void usb_lld_set_data_to_recv (void *p, size_t len);
+
+#ifdef MCU_KINETIS_L
+void usb_lld_tx_enable_buf (int ep_num, const void *buf, size_t len);
+void usb_lld_rx_enable_buf (int ep_num, void *buf, size_t len);
+
+void usb_lld_setup_endp (int ep_num, int rx_en, int tx_en);
+void usb_lld_stall (int ep_num);
+#else
+void usb_lld_tx_enable (int ep_num, size_t len);
+void usb_lld_rx_enable (int ep_num);
+
+void usb_lld_setup_endpoint (int ep_num, int ep_type, int ep_kind,
+			     int ep_rx_addr, int ep_tx_addr,
+			     int ep_rx_memory_size);
+void usb_lld_stall_tx (int ep_num);
+void usb_lld_stall_rx (int ep_num);
+
+int usb_lld_tx_data_len (int ep_num);
+void usb_lld_txcpy (const void *src, int ep_num, int offset, size_t len);
+void usb_lld_write (uint8_t ep_num, const void *buf, size_t len);
+void usb_lld_to_pmabuf (const void *src, uint16_t addr, size_t n);
+void usb_lld_from_pmabuf (void *dst, uint16_t addr, size_t n);
+void usb_lld_rxcpy (uint8_t *dst, int ep_num, int offset, size_t len);
+#endif
